2003-07-16  Lluis Sanchez Gual <lluis@ximian.com>

	* Identity.cs: Added TargetUri property

2003-04-10  Lluis Sanchez Gual <lluis@ideary.com>

	* ObjRef.cs: Fixed bug #43187, based on the patch by Jean-Marc Andre

2003-04-10  Lluis Sanchez Gual <lluis@ideary.com>

	* ObjRef.cs: Renamed ChannelInfoStore to ChannelInfo (match MS.NET)
	* RemotingServices.cs: Added method to help support Async messages.
	* RemotingConfiguration.cs: Implemented property ProcessID.

2003-03-24  Lluis Sanchez Gual <lluis@ideary.com>

	* RemotingServices.cs: Fixed bug #39915

2003-03-20  Lluis Sanchez Gual <lluis@ideary.com>

	* Identity.cs: Added support for dynamic properties.
	* ObjRef.cs: Removed some [MonoTODO]
	* TypeInfo.cs: Added support for interfaces.
	* RemotingServices.cs: Several fixes to support interfaces in proxies.

2003-03-15  Lluis Sanchez Gual <lluis@ideary.com>

	* RemotingServices.cs: fixes bugs #39380 and #39331.

2003-02-25 Lluis Sanchez Gual <lluis@ideary.com>

	* Identity.cs: Added property to check if an identity is connected (it is remotely accesible)
	* ObjRef.cs: Added internal helper method for getting the server type of an ObjRef.
	* RemotingServices.cs: Implemented Disconnect method. Added support for custom proxy
	  creating using ProxyAttribute. Added support for activation attributes in creation
	  of proxies. Some other minor corrections.
	* ServerIdentity.cs: minor corrections.

2003-02-18 Lluis Sanchez Gual <lluis@ideary.com>

	* Identity.cs: Added envoy message sink.
	* ObjRef.cs: Implemented EnvoySink property
	* RemotingConfiguration.cs: now enables proxy creation for types registered
	  as ClientActivatedType or WellKnownClientType.
	* RemotingServices.cs: Added support for ContextBoundObjects.
	  Added methods for creating proxies. 
	* ServerIdentity.cs: Added initialization of envoy sink.
	* EnvoyInfo.cs: Added. It is an implementation on IEnvoyInfo.

2003-02-08  Sebastien Pouliot  <spouliot@videotron.ca>
