@@ -1,3 +1,7 @@
+2003-07-21  Lluis Sanchez Gual <lluis@ximian.com>
+
+	* ServerIdentity.cs: Fixed bug #46645
+
 2003-07-16  Lluis Sanchez Gual <lluis@ximian.com>
 
 	* Identity.cs: Added TargetUri property
